downgrad java 21 to java 17 for more supporter, add postman collection